# FineLens

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  docker-compose.yml
backend/: diff.txt  pyproject.toml  requirements.txt  stash_diff.txt  test_search.py  vercel.json
backend/app/: config.py  graphiti_client.py  main.py
backend/app/ingestion/: bund.py  buzer.py  gesetze.py  oldp.py  reference.py  seed_corpus.py  statute_fetch.py
backend/app/models/: legal_ontology.py  schemas.py
backend/app/routers/: chat.py  forms.py  ingest.py  sources.py  users.py
backend/app/search/: legal_query_analysis.py  legal_retrieval.py  legal_search_config.py  query_rewriter.py  relevance_scorer.py  runtime_law_fetch.py
backend/app/services/: chat_service.py  chat_store.py  demo_sample.py  form_templates.py  form_templates_i18n.py  law_text.py  query_router.py  user_store.py
backend/scripts/: seed.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/: AnalysisLoadingScreen.tsx  AssistantMessage.tsx  CameraScannerModal.tsx  ChatPanel.tsx  ChatSidebar.tsx  CitationsPanel.tsx  DocumentAnalysisPanel.tsx  DocumentCaptureSheet.tsx  FormsPanel.tsx  Header.tsx  LanguageSwitcher.tsx  Logo.tsx  NewChatFlow.tsx  NotificationsDropdown.tsx  ProfileWizard.tsx  ResizableChatLayout.tsx  SourcesPanel.tsx
frontend/src/hooks/: useDocumentCapture.ts
frontend/src/i18n/: index.tsx  locale.ts
frontend/src/lib/: api.ts  demo-graph-data.ts  types.ts
(+4 files in other folders)
