[project]
name = "finelens-backend"
version = "0.1.0"
description = "German legal assistant backend powered by Graphiti"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "graphiti-core[falkordb]>=0.29.0",
    "falkordblite>=0.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.60.0",
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
